Updated environmental variables

--- a/IoT/kasa_smart_plug_mqtt/k8s_deployment_manifests/kasa_monitoring_mqtt_values.yaml
+++ b/IoT/kasa_smart_plug_mqtt/k8s_deployment_manifests/kasa_monitoring_mqtt_values.yaml
@@ -60,6 +60,8 @@ spec:
                 secretKeyRef:
                   key: KASA_PLUG1_IP
                   name: kasa-plug-ips
+            - name: SENSOR_ID
+              value: KASA_PLUG_1
             - name: INTERVAL
               value: '5'
       imagePullSecrets: 
