Updates so psycopg2 builds from sources

--- a/etl_pipelines/asana/Dockerfile
+++ b/etl_pipelines/asana/Dockerfile
@@ -4,6 +4,8 @@ FROM python:alpine as builder
 
 WORKDIR /app
 
+RUN apt-get update -y && apt-get install -y gcc python3-dev libpq-dev
+
 COPY /asana/requirements.txt .
 
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
