--- a/argo_workflow_manifests/etl_pipelines/asana/asana_homelabmkiii_project.yaml
+++ b/argo_workflow_manifests/etl_pipelines/asana/asana_homelabmkiii_project.yaml
@@ -33,12 +33,12 @@ spec:
             valueFrom:
               secretKeyRef:
                 key: POSTGRES_USER
-                name: postgres-secrets
+                name: pg-secrets
           - name: POSTGRES_PASSWORD
             valueFrom:
               secretKeyRef:
                 key: POSTGRES_PASSWORD
-                name: postgres-secrets
+                name: pg-secrets
           - name: ALERT_WEBHOOK
             valueFrom:
               secretKeyRef:
@@ -48,7 +48,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 key: ASANA_KEY
-                name: asana-secret
+                name: etl-secrets-data
           - name: DASHBOARD_DB
             valueFrom:
               configMapKeyRef:
@@ -58,12 +58,12 @@ spec:
             valueFrom:
               configMapKeyRef:
                 key: POSTGRES_DB_HOST
-                name: asana-etl-variables
+                name: postgres-config
           - name: POSTGRES_PORT
             valueFrom:
               configMapKeyRef:
                 key: POSTGRES_PORT
-                name: asana-etl-variables
+                name: postgres-config
           - name: ASANA_TABLE
             valueFrom:
               configMapKeyRef:
