--- a/etl_pipelines_nodejs/openweather_current_ts/package.json
+++ b/etl_pipelines_nodejs/openweather_current_ts/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
     "ajv": "^8.12.0",
-    "axios": "^1.7.4",
+    "axios": ">=1.8.2",
     "tsx": "^4.7.1"
   }
 }
