--- a/etl_pipelines_nodejs/github_node/package.json
+++ b/etl_pipelines_nodejs/github_node/package.json
@@ -20,6 +20,8 @@
     "@types/node": "^18.19.21",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "axios": "^1.8.2",
+    "esbuild": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "follow-redirects": ">=1.15.6",
@@ -30,7 +32,8 @@
     "follow-redirects": ">=1.15.6",
     "ajv": "^8.12.0",
     "@influxdata/influxdb-client": "^1.33.2",
-    "axios": "^1.7.4",
+    "axios": "^1.8.2",
+    "esbuild": "^0.25.0",
     "octokit": "^3.1.2",
     "tsx": "^4.7.1"
   }
