--- a/IoT/dht22_temp_sensor/Dockerfile
+++ b/IoT/dht22_temp_sensor/Dockerfile
@@ -1,6 +1,4 @@
-# Using a multi-stage build shaves ~100MB off the image size
-
-FROM python:3.12.2-slim as builder
+FROM python:3.13.3-slim AS builder
 
 WORKDIR /app
 
@@ -11,9 +9,9 @@ COPY ./dht22_temp_sensor/requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
 
 
-FROM python:3.12.2-slim
+FROM python:3.13.3-slim
 
-RUN apt-get update -y && apt-get install -y libgpiod2
+RUN apt-get update -y && apt-get install -y gcc python3-dev libgpiod2
 
 COPY --from=builder /app/wheels /wheels
 COPY --from=builder /app/requirements.txt .
@@ -22,8 +20,8 @@ RUN pip install --no-cache /wheels/*
 
 COPY ./iot_libraries ./iot_libraries 
 
-WORKDIR /iot_sensors
+WORKDIR /dht22_temp_sensor
 
 COPY ./dht22_temp_sensor ./
 
-ENTRYPOINT ["python3", "/iot_sensors/main.py"]
+ENTRYPOINT ["python3", "/dht22_temp_sensor/main.py"]
