--- a/IoT/bme280_temp_sensor/Dockerfile
+++ b/IoT/bme280_temp_sensor/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12.2-slim as builder
+FROM python:3.13.3-slim AS builder
 
 WORKDIR /app
 
@@ -9,9 +9,9 @@ COPY ./bme280_temp_sensor/requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
 
 
-FROM python:3.12.2-slim
+FROM python:3.13.3-slim
 
-RUN apt-get update -y && apt-get install -y libgpiod2
+RUN apt-get update -y && apt-get install -y gcc python3-dev libgpiod2
 
 COPY --from=builder /app/wheels /wheels
 COPY --from=builder /app/requirements.txt .
@@ -20,8 +20,8 @@ RUN pip install --no-cache /wheels/*
 
 COPY ./iot_libraries ./iot_libraries 
 
-WORKDIR /iot_sensors
+WORKDIR /bme280_temp_sensor
 
 COPY ./bme280_temp_sensor ./
 
-ENTRYPOINT ["python3", "/iot_sensors/main.py"]
+ENTRYPOINT ["python3", "/bme280_temp_sensor/main.py"]
