--- a/IoT/esp32_device_setup/esp32_store_wifi_&_general_creds/platformio.ini
+++ b/IoT/esp32_device_setup/esp32_store_wifi_&_general_creds/platformio.ini
@@ -11,6 +11,7 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+monitor_speed = 115200
 framework = arduino
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
@@ -18,3 +19,8 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	mlesniew/PicoMQTT@^0.3.8
 	bblanchon/ArduinoJson@^7.0.4
+
+build_flags =
+	-DMQTT_USER=\"${sysenv.MQTT_USER}\"
+	-DMQTT_SECRET=\"${sysenv.MQTT_SECRET}\"
+	-DMQTT_HOST=\"${sysenv.MQTT_HOST}\"
