Updated sketch for pulling data from a DHT22 device and then transmitting the data in json format to an MQTT broker

--- a/IoT/dht22_temp_sensor_cpp/platformio.ini
+++ b/IoT/dht22_temp_sensor_cpp/platformio.ini
@@ -12,10 +12,14 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	knolleary/PubSubClient@^2.8
 	mlesniew/PicoMQTT@^0.3.8
 	bblanchon/ArduinoJson@^7.0.4
-	
+build_flags =
+	-DMQTT_USER=\"${sysenv.MQTT_USER}\"
+	-DMQTT_SECRET=\"${sysenv.MQTT_SECRET}\"
+	-DMQTT_HOST=\"${sysenv.MQTT_HOST}\"
