--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "idf.adapterTargetName": "esp32c3",
     "idf.openOcdConfigs": [
         "board/esp32c3-ftdi.cfg"
+    ],
+    "cSpell.words": [
+        "CICD",
+        "Current"
     ]
 }
