Updating Git with file extensions for .Drawio temp files

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ etl_pipelines_nodejs/openweather_current_ts/coverage
 etl_pipelines_nodejs/openweather_airquality_nodejs/coverage/*.js
 etl_pipelines/finnhub_portfolio_view
 etl_pipelines/finnhub_portfolio_view/*
+*.bkp
