Temporarily  commenting out a few folders so dev work doesn't trigger needless image builds

--- a/.github/workflows/portainer_automated_redeployment.yaml
+++ b/.github/workflows/portainer_automated_redeployment.yaml
@@ -5,9 +5,9 @@ on:
     branches:
       - "main"
     paths:
-      - "cicd_pipeline_automation/docker_common/*"
-      - "cicd_pipeline_automation/portainer_common/*"
-      - "cicd_pipeline_automation/cicd_common/*"
+      # - "cicd_pipeline_automation/docker_common/*"
+      # - "cicd_pipeline_automation/portainer_common/*"
+      # - "cicd_pipeline_automation/cicd_common/*"
       - "cicd_pipeline_automation/portainer_automated_redeployment/*"
 
 jobs:
