Fixing Dockerfiles to make sure all node modules are imported + adding security improvements.  Updated file headers

--- a/etl_pipelines_nodejs/github_node/Dockerfile
+++ b/etl_pipelines_nodejs/github_node/Dockerfile
@@ -21,9 +21,14 @@ FROM node:22-alpine AS production
 
 WORKDIR /app
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 # Copy over the production/final files
 COPY --from=build /app/github_node /app/github_node
 COPY --from=build /app/common /app/common
+
+USER appuser
+ENV NODE_ENV=production
 
 CMD [ "node", "/app/github_node/src/index.js" ]
 
