--- a/etl_pipelines_nodejs/finnhub_nodejs/Dockerfile
+++ b/etl_pipelines_nodejs/finnhub_nodejs/Dockerfile
@@ -21,8 +21,14 @@ FROM node:22-alpine AS production
 
 WORKDIR /app
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 # Copy over the production/final files 
 COPY --from=build /app/finnhub_nodejs /app/finnhub_nodejs
 COPY --from=build /app/common /app/common
+COPY --from=build /app/node_modules /app/node_modules
+
+USER appuser
+ENV NODE_ENV=production
 
 CMD [ "node", "/app/finnhub_nodejs/src/index.js" ]
