--- a/etl_pipelines_nodejs/openweather_current_ts/Dockerfile
+++ b/etl_pipelines_nodejs/openweather_current_ts/Dockerfile
@@ -21,8 +21,14 @@ FROM node:22-alpine AS production
 
 WORKDIR /app
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 # Copy over the production/final files
 COPY --from=build /app/openweather_current_ts /app/openweather_current_ts
 COPY --from=build /app/common /app/common
+COPY --from=build /app/node_modules /app/node_modules
+
+USER appuser
+ENV NODE_ENV=production
 
 CMD [ "node", "/app/openweather_current_ts/src/index.js" ]
