--- a/etl_pipelines/asana/requirements.txt
+++ b/etl_pipelines/asana/requirements.txt
@@ -12,9 +12,9 @@ webencodings==0.5.1
 websocket-client
 pandas==2.1.3
 numpy==1.26.4
-asana==5.0.3
+asana==5.2.2
 joblib
 Werkzeug
 slack_sdk
-psycopg2-binary
+psycopg2-binary==2.9.10
 jsonschema  
