--- a/.github/workflows/technitium_monitoring.yaml
+++ b/.github/workflows/technitium_monitoring.yaml
@@ -28,6 +28,7 @@ jobs:
         with:
           context: ./network_management/
           file: ./network_management/technitium_monitoring/Dockerfile
-          platforms: linux/amd64
+          platforms: 
+            linux/arm64,linux/amd64
           push: true
           tags: markhamlee/technitium_monitoring:latest
