--- a/network_management/technitium_monitoring/Dockerfile
+++ b/network_management/technitium_monitoring/Dockerfile
@@ -3,7 +3,9 @@ FROM python:slim-bookworm AS builder
 
 WORKDIR /app
 
-RUN apt-get update -y && apt-get install -y gcc  python3-dev
+RUN apt-get update -y && apt-get install -y gcc python3-dev g++ libblas-dev liblapack-dev build-essential
+
+RUN pip install --upgrade pip setuptools wheel
 
 COPY /technitium_monitoring/requirements.txt .
 
