--- a/etl_pipelines/asana/Dockerfile
+++ b/etl_pipelines/asana/Dockerfile
@@ -4,7 +4,7 @@ FROM python:slim-bookworm AS builder
 
 WORKDIR /app
 
-RUN apt-get update -y && apt-get install -y gcc python3-dev libpq-dev
+RUN apt-get update -y && apt-get install -y gcc python3-dev g++ libblas-dev liblapack-dev build-essential
 
 RUN pip install --upgrade pip setuptools wheel
 
