Removing ARM64, causes issues from time to time, not worth the extra effort at the moment

--- a/.github/workflows/technitium_monitoring.yaml
+++ b/.github/workflows/technitium_monitoring.yaml
@@ -29,6 +29,6 @@ jobs:
           context: ./network_management/
           file: ./network_management/technitium_monitoring/Dockerfile
           platforms: 
-            linux/arm64,linux/amd64
+            linux/amd64
           push: true
           tags: markhamlee/technitium_monitoring:latest
