--- a/etl_pipelines/yield_curve_daily/Dockerfile
+++ b/etl_pipelines/yield_curve_daily/Dockerfile
@@ -2,7 +2,7 @@ FROM python:alpine as builder
 
 WORKDIR /app
 
-RUN apt-get update -y && apt-get install -y gcc python3-dev libpq-dev
+RUN apt-get update -y && apt-get install -y gcc python3-dev libpq-dev gcc  g++ libblas-dev liblapack-dev build-essential
 
 RUN pip install --upgrade pip setuptools wheel
 
