--- a/IoT/dht22_mqtt_esp32/platformio.ini
+++ b/IoT/dht22_mqtt_esp32/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; If you store a variable as text below, it can't end in an '=' Platformio won't be able to
+; pass it on to build process, you should put variables like that into secrets.h
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
@@ -19,7 +22,3 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	mlesniew/PicoMQTT@^0.3.8
 	bblanchon/ArduinoJson@^7.0.4
-build_flags =
-	-DMQTT_USER=\"${sysenv.MQTT_USER}\"
-	-DMQTT_SECRET=\"${sysenv.MQTT_SECRET}\"
-	-DMQTT_HOST=\"${sysenv.MQTT_HOST}\"
